Fixed the date format in show
- created a function in showPlant that uses moment to reformat the sent
date from mongoose (removes the time stamp)
- made the navbar sticky to stop it from scrolling out of view

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,3 +21,15 @@ body {
   max-width: 400px;
   justify-content: center;
 }
+
+.show-container {
+  display: flex;
+  max-width: 400px;
+  justify-content: center;
+}
+
+.show {
+  color: rgb(56, 156, 132);
+  text-align: center;
+  margin-top: 100px;
+}
